--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -131,6 +131,6 @@
     <string name="key_game_sfx">key_sfx</string>
     <string name="pref_game_sfx_title">Game sound effects</string>
 	
-    <string name="dlg_whats_new_message">➤New HD deck\n➤New button\n➤Background music and sound effects\n➤Low quality animations\n\n<b>Comming soon!</b>\n➤save/load GameSet/Game\n➤hard mode\n➤more preferences for more special cards\n➤game history when game finished\n</string>
+    <string name="dlg_whats_new_message">➤New HD deck\n➤New button\n➤Background music and sound effects\n➤Low quality animations\n\n<b>Coming soon!</b>\n➤save/load GameSet/Game\n➤hard mode\n➤more preferences for more special cards\n➤game history when game finished\n</string>
     <string name="key_dlg_whats_new_once">key_dlg_whats_new_once_v2.1</string>
 </resources>
