--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -34,14 +34,14 @@
     <string name="hand_and_score" formatted="false"> %s= %d %s</string>
     <string name="how_overview_title">Τα βασικά</string>
     <string name="how_rules_title">Κανόνες</string>
-    <string name="how_overview_content">Σε κάθε παρτίδα μοιράζονται από 7 φύλλα σε κάθε παίκτη. Ένα φύλλο τοποθετείται ανοιχτό στο τραπέζι, ενώ η υπόλοιπη τράπουλα τοποθετείται ανάποδα.\nΣκοπός κάθε παίκτη είναι να ρίξει όλα τα φύλλα που έχει στο χέρι. Όταν ένας παίκτης ρίξει το τελευταίο του φύλλο, τότε η παρτίδα τελειώνει. Ο αντίπαλός του παίρνει μηδέν πόντους, ενώ αυτός παίρνει πόντους, ανάλογα με το άθροισμα των πόντων του κάθε φύλλου που έχει μείνει στα χέρια του αντιπάλου.\nΚάθε φύλλο (από 2 έως 10) έχει τόσους πόντους όσο και ο αριθμός του. Οι φιγούρες (βαλές, ντάμα και ρήγας - J,Q,K) έχουν από 10 πόντους. Οι άσσοι (A) έχουν 20 πόντους.</string>
+    <string name="how_overview_content">Σε κάθε παρτίδα μοιράζονται από 7 φύλλα σε κάθε παίκτη. Ένα φύλλο τοποθετείται ανοιχτό στο τραπέζι, ενώ η υπόλοιπη τράπουλα τοποθετείται ανάποδα.\nΣκοπός κάθε παίκτη είναι να ρίξει όλα τα φύλλα που έχει στο χέρι. Όταν ένας παίκτης ρίξει το τελευταίο* του φύλλο, τότε η παρτίδα τελειώνει. Ο αντίπαλός του παίρνει μηδέν πόντους, ενώ αυτός παίρνει πόντους, ανάλογα με το άθροισμα των πόντων του κάθε φύλλου που έχει μείνει στα χέρια του αντιπάλου.\nΚάθε φύλλο (από 2 έως 10) έχει τόσους πόντους όσο και ο αριθμός του. Οι φιγούρες (βαλές, ντάμα και ρήγας - J,Q,K) έχουν από 10 πόντους. Οι άσσοι (A) έχουν 20 πόντους.</string>
     <string name="how_rules_content">Ο κάθε παίκτης πρέπει να ρίξει ένα φύλλο το οποίο να έχει είτε τον ίδιο αριθμό ή την ίδια φιγούρα με το φύλλο που βρίσκεται ανοικτό πάνω στο τραπέζι. Αν δεν έχει αντίστοιχο φύλλο, τότε πρέπει να τραβήξει ένα φύλλο από την τράπουλα. Αν και πάλι δεν βρει κατάλληλο φύλλο τότε πάει πάσο.\nΟ κάθε παίκτης μπορεί να τραβήξει φύλλο από την τράπουλα ακόμα και αν έχει διαθέσιμο φύλλο να παίξει. Μπορεί επίσης να πάει πάσο ακόμα και αν έχει διαθέσιμο φύλλο να παίξει. Σε κάθε περίπτωση όμως, πριν ένας παίκτης πάει πάσο θα πρέπει να έχει τραβήξει ένα φύλλο από την τράπουλα.</string>
     <string name="how_special_card_title">Ειδικά φύλλα</string>
     <string name="how_special_card_ace_title">Άσσος</string>
     <string name="how_special_card_seven_title">Εφτά</string>
     <string name="how_special_card_eight_title">Οκτώ</string>
     <string name="how_special_card_content">Κάποια φύλλα δεν ακολουθούν τους συνηθισμένους κανονες και έχουν ξεχωριστές ιδιότητες.</string>
-    <string name="how_special_card_ace_content">Ο Άσσος μπορεί να παιχτεί πάνω από οποιοδήποτε φύλλο (ασχέτος φιγούρας και αριθμού). Αν ένας παίκτης ρίξει Άσσο, τότε μπορεί να επιλέξει όποια φιγούρα θέλει. Ο επόμενος παίκτης θα παίξει με τη φιγούρα που έχει δηλωθεί.</string>
+    <string name="how_special_card_ace_content">Ο Άσσος μπορεί να παιχτεί πάνω από οποιοδήποτε* φύλλο (ασχέτος φιγούρας και αριθμού). Αν ένας παίκτης ρίξει Άσσο, τότε μπορεί να επιλέξει όποια φιγούρα θέλει. Ο επόμενος παίκτης θα παίξει με τη φιγούρα που έχει δηλωθεί.</string>
     <string name="how_special_card_seven_content">Αν ένας παίκτης ρίξει 7, τότε ο επόμενος παίκτης τραβάει δύο φύλλα από την τράπουλα, εκτός αν έχει και ο ίδιος 7, οπότε παίζοντάς το ο επόμενος παίκτης θα τραβήξει 4 φύλλα από την τράπουλα κ.ο.κ. μέχρι να βρεθεί παίκτης που δεν έχει 7. Αν ο παίκτης που θα πάρει τα φύλλα δεν έχει κατάλληλο φύλλο για να παίξει, τότε θα τραβήξει ένα φύλλο από την τράπουλα. Άν ένας παίκτης τραβήξει φύλλα μετά από το 7 του προηγούμενου παίκτη και στα φύλλα που θα τράβηξε βρει 7άρι, μπορεί να το παίξει, αλλά θα ισχύει σαν να είναι το πρώτο 7άρι (ο επόμενος παίκτης θα τραβήξει 2 φύλλα).</string>
     <string name="how_special_card_eight_content">Αν ένας παίκτης ρίξει 8, πρέπει να ξαναπαίξει. Αν δεν έχει κατάλληλο φύλλο, πρέπει να τραβήξει από την τράπουλα και αν δεν βρει κατάλληλο φύλλο να πάει πάσο. Ένας παίκτης μπορεί να παίξει στη σειρά όσα 8άρια θέλει.</string>
     <string name="next">Επόμενο</string>
@@ -94,7 +94,7 @@
     <string name="pref_game_music_title">Μουσική υπόκρουση</string>
     <string name="pref_game_sfx_title">Ηχητικά εφέ</string>
 
-    <string name="dlg_whats_new_message">Στατιστικά παιχνιδιών.\nΑυτόματη αποθήκευση επιλογών για νέα παρτίδα.\nΕπιλογή ενός Επτά (αν υπάρχει) στο διάλογο για Επτά\n\n<b>Στην επόμενη αναβάθμιση!</b>\n\nΙστορικό παιχνιδιού.\n\nΚαλή διασκέδαση, Χριστός ανέστη. Ευχαριστώ πολύ για τη στήριξη σας!! :)\n</string>
+    <string name="dlg_whats_new_message">Ιστορικό παιχνιδιού.\n\n<b>Στην επόμενη αναβάθμιση!</b>\nΠαιχνιδια με αντιπαλους online\n\nΗ εποενη αναβαθιση θα βγει στο τελος Αυγουστου, αν ενδιαφερεσαι να γινεις beta tester στειλε μου email.\nΚαλή διασκέδαση!! :)</string>
 
     <!-- v2.2 -->
 	<string name="dlg_set_load_title">Συνέχιση παιχνιδιού</string>
